[gd_scene load_steps=9 format=3 uid="uid://bog6h6vlxchda"]

[ext_resource type="Script" path="res://src/Characters/Freek/freek.gd" id="1_r4tme"]
[ext_resource type="SpriteFrames" uid="uid://kijdvek67r3" path="res://src/Characters/Freek/freek_sprites.tres" id="2_07p1d"]
[ext_resource type="Script" path="res://src/StateMachines/StateMachine.gd" id="3_iegyp"]
[ext_resource type="Script" path="res://src/Characters/Freek/States/idle.gd" id="4_66ghv"]
[ext_resource type="Script" path="res://src/Characters/Freek/States/move.gd" id="5_t3prf"]
[ext_resource type="Script" path="res://src/Characters/Freek/States/piloting.gd" id="6_10qjl"]
[ext_resource type="Script" path="res://src/Characters/Freek/States/die.gd" id="6_pbdhg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vpejk"]
radius = 6.0
height = 18.0

[node name="Freek" type="CharacterBody2D"]
collision_layer = 32897
script = ExtResource("1_r4tme")

[node name="collision_body" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape2D_vpejk")

[node name="freek_sprites" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = ExtResource("2_07p1d")
animation = &"move"
autoplay = "idle"

[node name="StateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_iegyp")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_66ghv")

[node name="Piloting" type="Node" parent="StateMachine"]
script = ExtResource("6_10qjl")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("6_pbdhg")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("5_t3prf")

[node name="FreekCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.15
drag_right_margin = 0.1
drag_bottom_margin = 0.15
